--- a/fall.html
+++ b/fall.html
@@ -7,10 +7,7 @@
 </head>
 
 <body>
-    <main>
-		Look at the pretty leaves :)
-    </main>
-    
     <script type="text/javascript" src="fall.js"></script>
+	<link rel="stylesheet" href="styles.css" />
 </body>
 </html>
